# edap1b-fargate-combine-gzip-files

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CODEOWNERS  LICENSE  Makefile  README.md  azure-pipelines-halo.yml  config.env
app/: Dockerfile  app.py  appinfo.py  requirements.txt  setup.py
app/loggingutil/: README.md
app/loggingutil/src/loggingutil/: loggingutil.py
app/loggingutil/tests/: test_loggingutil.py
app/modules/loggingutil/: requirements.txt  setup.cfg  setup.py
app/modules/loggingutil/src/loggingutil/: __init__.py
tests/: test_app.py
