[metadata]
name = loggingutil
version = 0.0.2
description = UKHSA Logging Utility Package
license = Other/Proprietary License
platforms = any
classifiers =
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
include_package_data = True

[options]
install_requires =
    python-json-logger~=2.0
package_dir =
    =src
packages = loggingutil
python_requires = >=3.7, <3.11
